# AITMS

./: .gitignore  .pre-commit-config.yaml  AI_DEPENDENCIES.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  TI_INGESTION.md  USAGE.md  atms.spec  pyproject.toml  requirements.txt
.claude/skills/tm-from-image/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents/: README.md  applicability-engineer.md  cli-developer.md  cloud-catalog-curator.md  content-validator.md  doc-writer.md  engine-developer.md  framework-validator.md  ingestion-specialist.md  kb-curator.md  reporting-specialist.md  security-reviewer.md  test-writer.md  web-developer.md
docs/: ARCHITECTURE.md  ARCHITECTURE.mmd  BENCHMARKS.md  CLI.md  CONTRIBUTING.md  COVERAGE.md  CSA-ALIGNMENT.md  GETTING-STARTED.md  MCP.md  PERFORMANCE.md  ROADMAP.md  architecture.html  system.schema.json
installer/: atms.iss
kb/: methodology_provenance.yaml  palette_meta.yaml  stride_ai_matrix.yaml  system.schema.json
kb/cloud_catalog/: alibaba.yaml  aws.yaml  azure.yaml  gcp.yaml  oci.yaml
kb/compliance/: controls.yaml
kb/csa_singapore/: guidelines.yaml
kb/d3fend/: mappings.yaml
kb/devices/: catalog.yaml
kb/linddun/: threats.yaml
kb/maestro/: layers.yaml  threats.yaml
kb/mitre_atlas/: mitigations.yaml  tactics.yaml  techniques.yaml
kb/mitre_attack_cloud/: techniques.yaml
kb/mitre_attack_enterprise/: techniques.yaml
kb/nist_ai_100_2/: taxonomy.yaml
kb/nist_ai_rmf/: genai_profile.yaml
kb/owasp_agentic/: threats.yaml
kb/owasp_api/: api_top10_2023.yaml
kb/owasp_llm/: llm_top10_2025.yaml
kb/owasp_ml/: ml_top10_2023.yaml
kb/playbooks/: agent.yaml  alerting_platform.yaml  api_gateway.yaml  artifact_registry.yaml  backup_service.yaml  bastion_host.yaml  batch_compute.yaml  block_storage.yaml  build_runner.yaml  cache_store.yaml  casb.yaml  cdn.yaml  certificate_manager.yaml  ci_cd_pipeline.yaml  ciam_platform.yaml  cloud_compute.yaml  code_repository.yaml  container_orchestrator.yaml  container_registry.yaml  container_runtime.yaml  container_security.yaml  content_safety_classifier.yaml  cspm.yaml  data_lake.yaml  data_source.yaml  data_warehouse.yaml  database.yaml  dcs.yaml  ddos_mitigation.yaml  directory_service.yaml  dlp.yaml  dns_service.yaml  edge_compute.yaml  edr_agent.yaml  email_server.yaml  embedding_service.yaml  endpoint.yaml  etl_orchestrator.yaml  external_api.yaml  feature_flag_service.yaml  (+81 more)
kb/priors/: loss_priors.yaml
kb/reference_patterns/: README.md  aws_genai_lens.yaml  aws_sra.yaml  azure_lza.yaml  azure_waf_ai.yaml
kb/threat_intel/: cisa_kev.yaml  epss_top.yaml
kb/vendor_threats/: anthropic_api.yaml  aws_bedrock.yaml  aws_iam.yaml  aws_sagemaker.yaml  azure_appservice.yaml  azure_foundry.yaml  azure_ml.yaml  databricks_ai.yaml  gcp_iam.yaml  gcp_vertex.yaml  gcp_vertex_ai.yaml  openai_api.yaml
samples/: agentic_system.yaml  autonomous_coding_agent.yaml  aws_bedrock_agent.yaml  aws_portfolio_agent.yaml  azure_openai_rag.yaml  bank_with_llm_fraud.yaml  chatbot.yaml  enterprise_rag_agent.yaml  fine_tuning.yaml  fintech_payment_ledger.yaml  healthcare_ehr_fhir.yaml  it_ot_factory.yaml  multi_tenant_llm_platform.yaml  ot_water_treatment.yaml  pure_it_estate.yaml  rag_system.yaml  test_diagram.vsdx
samples/corpus/: aws_cfn_lambda_sample.yaml  azure_keyvault.bicep  k8s_guestbook.yaml  owasp_threat_dragon_demo.json  owasp_threat_dragon_demo.yaml
samples/iac/: README.md  aoai_rag.bicep  docker-compose.yml  eks_microservices.cfn.yaml  k8s_microservices.yaml  main.tf  multi_cloud.pulumi.yaml  rag_pipeline.mmd  webapp.drawio
scripts/: build_exe.py  build_installer.py  check_architecture_drift.py  fetch_mermaid.py  gen_palette.py  gen_schema.py  keep_coverage.py  verify_wheel.py
src/atms/: __init__.py  __main__.py  cli.py  features.py  kb.py  mcp_server.py  models.py  paths.py  pipeline.py  web.py  workflow.py  yaml_autocorrect.py
src/atms/engines/: __init__.py  _ids.py  ai_scope.py  aicm.py  applicability.py  architectural_rules.py  attack_paths.py  boundaries.py  cbra.py  cloud.py  compliance.py  controls.py  d3fend.py  evidence.py  frameworks.py  kill_chain.py  linddun.py  maestro.py  mapping.py  mitigations.py  nist_ai_100_2.py  owasp_ml.py  quantitative.py  reference_patterns.py  risk.py  stride_ai.py  structural.py
src/atms/evidence/: __init__.py  csv_parser.py  matcher.py  nessus.py  redteam.py  sarif.py  stix.py
src/atms/feeds/: __init__.py  cve_lookup.py  refresh.py
src/atms/ingest/: __init__.py  azure_arm.py  cloudformation.py  docker_compose.py  drawio.py  kubernetes.py  mermaid.py  otm.py  pulumi_yaml.py  terraform.py  tm7.py  vsdx.py
src/atms/reporting/: __init__.py  compliance_matrix.py  csa_risk_register.py  csa_table.py  html.py  (+11 more)
tests/: conftest.py  test_ai_scope.py  test_aicm.py  test_api_analyze.py  test_api_scan.py  test_applicability.py  test_arch_rule_controls_aware.py  test_arch_rule_external_facing.py  test_arch_rule_protective_fp.py  test_arch_rule_waf_fp.py  test_architectural_rules.py  test_architecture_drift.py  test_audit_determinism_offline.py  test_audit_format_validity.py  test_audit_fp_gating.py  test_audit_sample_sweep.py  test_azure_arm_ingest.py  test_boundaries.py  test_browser_e2e.py  test_cbra.py  test_choke_points.py  test_citation_integrity.py  test_classification_confidence_in_report.py  test_cli_init.py  test_cli_phase_e.py  test_cli_scan.py  test_cli_validate.py  test_cli_watch.py  test_cloudformation_ingest.py  test_compliance_matrix.py  test_controls_waf.py  test_csa_risk_register.py  test_csa_table.py  test_cve_lookup.py  test_cycle_aaa_bicep_loops.py  test_cycle_ccc_threat_tree.py  test_cycle_ddd_threat_dragon_corpus.py  test_cycle_eee_k8s_guestbook_corpus.py  test_cycle_eee_tm7_ingest.py  test_cycle_fff_aws_cfn_corpus.py  (+96 more)
tests/fixtures/: sample.tm7
(+28 files in other folders)
